--- a/principal/templates/centro.html
+++ b/principal/templates/centro.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Centro</title>
 </head>
 <body>
-    <h4>Home</h4>
-    <ul>
-        <li><a href= {% url 'Centros' %}>Centros</a></li>
-        <li><a href={% url 'Lista_animales' %}>Animales</a></li>
-    </ul>
+    <p>
+        <strong>Nombre:</strong> {{centro.nombre}} <br>
+        <strong>Direccion:</strong> {{centro.direccion}}
+    </p>
 </body>
 </html>
