--- a/principal/templates/centros.html
+++ b/principal/templates/centros.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Centros</title>
 </head>
 <body>
-    <h4>Home</h4>
     <ul>
-        <li><a href= {% url 'Centros' %}>Centros</a></li>
-        <li><a href={% url 'Lista_animales' %}>Animales</a></li>
+        {% for centro in centros %}
+        <li><a href={% url 'Centro' centro.id %}>{{ centro.nombre }}</a></li>
+        {% endfor %}
     </ul>
 </body>
 </html>
