--- a/principal/templates/animal.html
+++ b/principal/templates/animal.html
@@ -11,8 +11,9 @@
         <strong>Nombre:</strong> {{ animal.nombre}} <br>
         <strong>Peso (Kg):</strong> {{ animal.peso }} <br>
         <strong>Color:</strong> {{ animal.color }} <br>
-        <strong>Raza:</strong> {{animal.raza}} <br>
-        <strong>Pelaje:</strong> {{animal.pelaje}}
+        <strong>Raza:</strong> {{tipo.raza}} <br>
+        <strong>Pelaje:</strong> {{tipo.pelaje}} <br>
+        <strong>Centro:</strong> <a href={% url 'Centro' tipo.centro.id %}>{{ tipo.centro.nombre }}</a>
     </p>
 </body>
 </html>
