--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -6,34 +6,21 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="/static/style/base.css" />
-    <title>MyRestaurants by MyRecommendations</title>
+    <title>PetShelter</title>
 </head>
 
 <body>
 
 <div id="header">
-            <p><a href="/accounts/login/?next=/petshelter/">login</a></p>
+    <a href={% url 'Index' %}>Home</a> | <a href={% url 'login' %}>login</a>
 </div>
 
-<div id="sidebar">
-        <ul>
-            <li><a href="/petshelter/">Home</a></li>
-        </ul>
-</div>
-
-<div id="content">
-    
+<div id="content"> 
 <h1>
     PetShelter
-    
 </h1>
-<ul>
     <li><a href= {% url 'Centros' %}>Centros</a></li>
     <li><a href={% url 'Lista_animales' %}>Animales</a></li>
-</ul>
 </div>
-<div id="footer">
-</div>
-
 </body>
 </html>
