--- a/principal/templates/animal.html
+++ b/principal/templates/animal.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ animal.nombre}}</title>
-</head>
-<body>
-    <div id="header">
-        <a href={% url 'Index' %}>Home</a> | <a href={% url 'login' %}>login</a>
-    </div>
+{% include 'base.html' %}
+{% block content %}
     <p>
         <strong>Nombre:</strong> {{ animal.nombre}} <br>
         <strong>Peso (Kg):</strong> {{ animal.peso }} <br>
@@ -18,5 +8,4 @@
         <strong>Pelaje:</strong> {{tipo.pelaje}} <br>
         <strong>Centro:</strong> <a href={% url 'Centro' tipo.centro.id %}>{{ tipo.centro.nombre }}</a>
     </p>
-</body>
-</html>
+{% endblock %}
