--- a/principal/templates/centro.html
+++ b/principal/templates/centro.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Centro</title>
-</head>
-<body>
-    <div id="header">
-        <a href={% url 'Index' %}>Home</a> | <a href={% url 'login' %}>login</a>
-    </div>
+{% include 'base.html' %}
+{% block content %}
     <p>
         <strong>Nombre:</strong> {{centro.nombre}} <br>
         <strong>Direccion:</strong> {{centro.direccion}}
     </p>
-</body>
-</html>
+{% endblock %}
