--- a/principal/templates/centros.html
+++ b/principal/templates/centros.html
@@ -1,19 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Centros</title>
-</head>
-<body>
-    <div id="header">
-        <a href={% url 'Index' %}>Home</a> | <a href={% url 'login' %}>login</a>
-    </div>
+{% include 'base.html' %}
+{% block content %}
     <ul>
         {% for centro in centros %}
         <li><a href={% url 'Centro' centro.id %}>{{ centro.nombre }}</a></li>
         {% endfor %}
     </ul>
-</body>
-</html>
+    {% endblock %}
