--- a/principal/templates/login.html
+++ b/principal/templates/login.html
@@ -22,6 +22,7 @@
     </div>
     <div>
       <button type="submit">Login</button>
+      <input type="button" value="Back" onclick="history.back()">
     </div>
   </form>
 </html>
