--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <a href={% url 'Index' %}>Home</a> | {% if user.is_authenticated %} <a href={% url 'logout' %}>logout</a> {% else %}<a href={% url 'login' %}>login</a> {% endif %}
+        <a href={% url 'Index' %}>Home</a> | {% if user.is_authenticated %} <a href={% url 'logout' %}>logout</a> {% else %}<a href={% url 'Registro_cliente' %}>Registro</a> | <a href={% url 'login' %}>login</a> {% endif %}
         {% if user.is_cliente %}
         <h4>
             Conectado como {{user.cliente.nombre }} {{user.cliente.apellidos }}
