--- a/principal/templates/registro_trabajador.html
+++ b/principal/templates/registro_trabajador.html
@@ -15,6 +15,7 @@
                 {{ form.as_table }}
             </table>
             <input type="submit" value=Submit>
+            <input type="button" value="Back" onclick="history.back()">
         </form>
     </div>
     </div>
