--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PetShelter</title>
 </head>
 <body>
     <div>
-        <a href={% url 'Index' %}>Home</a> | {% if user.is_authenticated %} <a href={% url 'logout' %}>logout</a> {% else %}<a href={% url 'Registro_cliente' %}>Registro</a> | <a href={% url 'login' %}>login</a> {% endif %}
+        <a href={% url 'Index' %}>Home</a> | 
+            {% if user.is_authenticated %} <a href={% url 'logout' %}>logout</a> {% else %}<a href={% url 'Registro_cliente' %}>Registro</a> 
+            | <a href={% url 'login' %}>login</a> {% endif %}
+            {% if user.is_trabajador %} | <a href={% url 'Administracion' %}> Administracion</a> {% endif %}
         {% if user.is_cliente %}
         <h4>
             Conectado como {{user.cliente.nombre }} {{user.cliente.apellidos }}
