--- a/principal/templates/logout.html
+++ b/principal/templates/logout.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Logout</title>
     </head>
 <h2>Logout</h2>
 <p>You have successfully logged out.</p>
