--- a/principal/templates/centro.html
+++ b/principal/templates/centro.html
@@ -3,5 +3,7 @@
     <p>
         <strong>Nombre:</strong> {{centro.nombre}} <br>
         <strong>Direccion:</strong> {{centro.direccion}}
+        <br>
+        {% if user.is_trabajador %}<a href="{% url 'edit_centro' centro.id %}">Editar centro</a>{% endif %}
     </p>
 {% endblock %}
