add behave test 1 (doesn't work)

--- a/principal/templates/login.html
+++ b/principal/templates/login.html
@@ -21,7 +21,7 @@
       <input type="password" name="password" id="password" required>
     </div>
     <div>
-      <button type="submit">Login</button>
+      <button type="submit" value="login">Login</button>
       <input type="button" value="Back" onclick="history.back()">
     </div>
   </form>
