--- a/principal/templates/centro_creado.html
+++ b/principal/templates/centro_creado.html
@@ -1,6 +1,6 @@
 {% include 'base.html' %}
 {% if user.is_trabajador %} 
-Animal creado correctamente
+Centro creado correctamente
 {% else %}
     <h4>Para acceder a esta seccion necesitas iniciar sesion con tu cuenta de trabajdor del centro </h4>
 {% endif %} 
