--- a/principal/templates/new_animal.html
+++ b/principal/templates/new_animal.html
@@ -1,4 +1,5 @@
 {% include 'base.html' %}
+{% if user.is_trabajador %} 
 <form method="post" enctype="multipart/form-data" action="">
     {% csrf_token %}
     <table>
@@ -6,3 +7,6 @@
     </table>
     <input type="submit" value="Crear" />
 </form>
+{% else %}
+    <h4>Para acceder a esta seccion necesitas iniciar sesion con tu cuenta de trabajdor del centro </h4>
+{% endif %} 
