--- a/principal/templates/administracion.html
+++ b/principal/templates/administracion.html
@@ -16,9 +16,9 @@
         <label>Eliminar animal:</label>
         <form name="eliminar_animal">
             <select name="menu">  
-                <option value="perro">Perro</option> 
-                <option value="gato">Gato</option> 
-                <option value="otro">Otro</option> 
+                <option value="Perro">Perro</option> 
+                <option value="Gato">Gato</option> 
+                <option value="Otro">Otro</option> 
             </select> 
             <input type="button" onClick="location='/administracion/eliminar_animal/' + document.eliminar_animal.menu.value + '/';" value="Eliminar">
         </form>
