--- a/principal/templates/administracion.html
+++ b/principal/templates/administracion.html
@@ -18,6 +18,7 @@
             <select name="menu">  
                 <option value="Perro">Perro</option> 
                 <option value="Gato">Gato</option> 
+                <option value="Centro">Centro</option> 
                 <option value="Otro">Otro</option> 
             </select> 
             <input type="button" onClick="location='/administracion/eliminar_animal/' + document.eliminar_animal.menu.value + '/';" value="Eliminar">
