--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -10,11 +10,9 @@
 <body>
     <div>
         <a href={% url 'Index' %}>Home</a> | 
-            {% if user.is_authenticated %} <a href={% url 'logout' %}>logout</a> | <a href={% url 'edit_user' %}>Usuario</a> 
-            {% else %}<a href={% url 'Registro_cliente' %}>Registro</a> |
-            <a href={% url 'login' %}>login</a> {% endif %}
-            {% if user.is_trabajador %} | <a href={% url 'Administracion' %}> Administracion</a> {% endif %}
-        
+            {% if user.is_authenticated %} <a href={% url 'logout' %}>logout</a> | <a href={% url 'edit_user' %}>Usuario</a> {% else %}<a href={% url 'Registro_cliente' %}>Registro</a> 
+            | <a href={% url 'login' %}>login</a> {% endif %}
+            {% if user.is_trabajador %} | <a href={% url 'Administracion' %}>Administracion</a> {% endif %}
         {% if user.is_cliente %}
         <h4>
             Conectado como {{user.cliente.nombre }} {{user.cliente.apellidos }}
@@ -26,3 +24,5 @@
         </h4>
         {% endif %}
     </div>
+</body>
+</html>
